--- a/app/src/main/res/drawable/bg_drag_view.xml
+++ b/app/src/main/res/drawable/bg_drag_view.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="16dp"/>
-    <solid android:color="@android:color/holo_red_light"/>
+    <solid android:color="@android:color/white"/>
 </shape>
