--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_home_panel"
+    android:id="@+id/home_slide_panel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
-    app:umanoDragView="@id/layout_home_slide_view"
+    app:umanoDragView="@id/home_slide_view"
     app:umanoOverlay="true"
     app:umanoInitialState="hidden"
     app:umanoPanelHeight="500dp">
@@ -17,7 +17,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_home"
+            android:id="@+id/home_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
         <View
-            android:id="@+id/view_mask"
+            android:id="@+id/home_view_mask"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,21 +39,16 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_home_slide_view"
+        android:id="@+id/home_slide_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_drag_view"
         android:paddingBottom="10dp">
 
-        <TextView
-            android:id="@+id/text_drag_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="36sp"
-            android:textStyle="bold"/>
+        <FrameLayout
+            android:id="@+id/home_drag_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
